# unigen

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  unigenConfig.cmake.in
.github/workflows/: build.yml  newpython.yml  python-package-build.yml
html/: index.html
python/: README.md  setup.py  todo.sh
python/src/: GitSHA1.cpp  pyunigen.cpp
python/tests/: test_pyunigen.py
scalmc/scalmc.xcodeproj/: project.pbxproj
scalmc/scalmc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scalmc/scalmc.xcodeproj/project.xcworkspace/xcuserdata/meel.xcuserdatad/: UserInterfaceState.xcuserstate
scripts/: build_emscripten.sh  solvetimes_from_output_unigen.sh
scripts/build_scripts/: build_norm.sh
src/: CMakeLists.txt  GitSHA1.cpp.in  GitSHA1.h  config.h  main.cpp  sampler.cpp  sampler.h  time_mem.h  unigen.cpp  unigen.h  unigen.h.in  unigenconfig.h
