[build-system]
requires = ["setuptools>=42", "wheel", "toml", "pathlib"]
build-backend = "setuptools.build_meta"

[project]
name = "pyunigen"
version = "2.5.5"
description = "Bindings to UniGen, an approximate sampler"
keywords = ["sat", "model-counting"]
license = { file = "LICENSE" }
maintainers = [{name="Mate Soos", email="soos.mate@gmail.com"}]
authors = [{name="Mate Soos", email="soos.mate@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
    ]
requires-python = ">=3.5"
readme = "python/README.md"
